kube/ac-node-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ac-node-tcp
  name: ac-node-tcp
spec:
  ports:
    - name: "backend"
      port: 8001
      targetPort: 3000
  selector:
    service: ac-node
  type: LoadBalancer
status:
  loadBalancer: {}
