kube/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongodb
  name: mongodb
spec:
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: 27017
  selector:
    service: mongodb
  type: LoadBalancer
status:
  loadBalancer: {}
