kube/ac-node-devops-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ac-node-devops
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/ac-node-devops: "true"
  podSelector:
    matchLabels:
      network/ac-node-devops: "true"
